fix: transparent footer on smaller screens

--- a/examples-standalone/kendo-angular-finance-portfolio/src/app/components/footer/footer.component.scss
+++ b/examples-standalone/kendo-angular-finance-portfolio/src/app/components/footer/footer.component.scss
@@ -7,6 +7,8 @@
     background: url('../../../assets/footer-bg.svg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: blue;
+    z-index: 999;
     font-size: $footer-font-size;
     color: $white;
 
